--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "ember-css-modules-less",
 	"version": "0.0.0",
-	"description": "The default blueprint for ember-cli addons.",
+	"description": "An ember-css-modules plugin that configures the build pipeline for use with Less",
 	"keywords": [
-		"ember-addon"
+		"ember-addon",
+		"ember-css-modules-plugin"
 	],
 	"repository": "",
 	"license": "MIT",
@@ -41,14 +42,17 @@
 		"@embroider/test-setup": "^3.0.1",
 		"@glimmer/component": "^1.1.2",
 		"@glimmer/tracking": "^1.1.2",
+		"bootstrap-less-port": "^2.5.1",
 		"broccoli-asset-rev": "^3.0.0",
 		"concurrently": "^8.0.1",
 		"ember-auto-import": "^2.6.3",
 		"ember-cli": "~4.12.1",
 		"ember-cli-dependency-checker": "^3.3.1",
 		"ember-cli-inject-live-reload": "^2.1.0",
+		"ember-cli-less": "^3.0.2",
 		"ember-cli-sri": "^2.1.1",
 		"ember-cli-terser": "^4.0.2",
+		"ember-css-modules": "^2.0.1",
 		"ember-load-initializers": "^2.1.2",
 		"ember-page-title": "^7.0.0",
 		"ember-qunit": "^6.2.0",
