--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"start": "ember serve",
 		"test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
 		"test:ember": "ember test",
-		"test:ember-compatibility": "ember try:each"
+		"test:ember-compatibility": "ember try:each; rm -rf .node_modules.ember-try/"
 	},
 	"dependencies": {
 		"ember-cli-babel": "^7.26.11",
@@ -78,7 +78,7 @@
 		"webpack": "^5.85.0"
 	},
 	"peerDependencies": {
-		"ember-source": "^4.0.0"
+		"ember-source": ">= 3.24.0"
 	},
 	"engines": {
 		"node": "14.* || 16.* || >= 18"
