--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 16.x
           cache: npm
       - name: Install Dependencies
         run: npm ci
@@ -40,10 +40,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 16.x
           cache: npm
       - name: Install Dependencies
-        run: npm install --no-shrinkwrap
+        run: npm install --no-package-lock
       - name: Run Tests
         run: npm run test:ember
 
@@ -70,7 +70,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 16.x
           cache: npm
       - name: Install Dependencies
         run: npm ci
